# p-tracking_system

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  README.md  current_task.md  env.yml  mkdocs.yml  pyproject.toml  requirements.txt  todo
.github/workflows/: deploy-backend.yml  deploy-gradio.yml
ai/: constants.py  pyproject.toml
ai/contracts/: detector.py
ai/depth/: depth_anything.py
ai/detectors/: yolo_detector.py
ai/domain/: depth.py
ai/trackers/: yolo_tracker.py
ai/utils/: constants.py  hugging_face.py
app/: config.py  config.yaml  logs
backend/: Dockerfile  README.md  main.py  requirements.txt
backend/api/: dependencies.py
backend/api/routers/: camera_stream.py  dashboard_stream.py  health.py  metrics.py
backend/config/: config.yaml  settings.py
backend/contracts/: camera_metadata.py
backend/domain/: detection_box_center.py
backend/infra/: logger_structlog.py  system_metrics.py
backend/services/: pipeline.py
backend/tests/: test_pipeline.py
backend/utils/: experiment.py  profiling.py
config/: settings.py
config/logs/: logs
dashboard/: .env.development  .env.production  eslint.config.js  package-lock.json  package.json
dashboard/src/: FloorPlanDashboard.tsx  design.css  main.tsx  vite-env.d.ts
dashboard/src/assets/: index.ts
dashboard/src/components/: buttons.tsx  canvas.tsx  graph.tsx  popups.tsx
dashboard/src/hooks/: useCameraStream.ts
dashboard/src/types/: graph.ts
dashboard/src/utils/: equations.ts  functions.ts  nodes.ts  storage.ts
docs/: ARCHITECTURE.md  DEFINITIONS.MD  README.md  ai.md  backend.md  front.md  test.md
domain/: depth.py  detector.py  logger.py  tracker.py
gradio/: README.md  app.py  backend_client.py
infra/: logger_structlog.py  system_metrics.py
scripts/: depth_anything_v2.sh  get_requirements.sh  mlflow.sh  run_checks.sh  run_server_scalene.sh  spy_profiler.sh  start_server.sh  start_server_pyinstrument.sh
tests/: playground.ipynb  playground.py  test_dashboard_client.py  test_depth_anything.py  test_depth_anything_v2.py  test_detectors.py  test_server.py  test_websockets.py
tests/unit/: test_pipeline.py
