# This is an overall alternative of SetupTools function that had been used before to create a package
# It tells pip which tool to use to build/install package.
# project-name-in-card@git+https://github.com/your-username/your-repo.git#subdirectory=folder_name
# project-name-in-card@git+https://github.com/your-username/your-repo.git#branch

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Project Data Card
[project]
name = "tracking_system"  # What ll be used in 'pip install'
version = "0.0.7"  # Increase this after some modifications to the ai package code. 
description = ""
requires-python = ">=3.11"
dependencies = [
    "torch",
    "numpy",
    "opencv-python",
    "pydantic",
    "ultralytics"
]

# pip install -e ".[dev]" -> This create a group of required package for dev, not deploy. 
# differs between the user of this package and the contributer As the user does't require testing packages, but contributer do.
[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "ruff",  # Code Formater and linter
    "pyright", # type checker
    "mkdocs",
    "pre-commit"

]

[tool.hatch.build.targets.wheel]
packages = ["ai"]  # Match folder name in repo

# Ruff Section
# Note that it ignore files in .gitignore by default.
[tool.ruff]
exclude = [
    "ai/Depth-Anything-V2",
    "playground.*",
]
# Feel free also to customize ruff settings from here before formating it from cli


# Pyright
[tool.pyright]

include = ["ai"]

typeCheckingMode = "basic"  # Or strict is you want true senior-level regorous check
reportMissingImports = true
reportMissingTypeStubs = false


# Pytest
[tool.pytest.ini_options]

testpaths = ["tests"]

# Requierd for pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"