# This is an overall alternative of SetupTools function that had been used before to create a package
# It tells pip which tool to use to build/install package.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Package metadata
[project]
name = "tracking_system_ai"
version = "0.0.1"
requires-python = ">=3.11"

dependencies = [
    "torch",
    "numpy",
    "opencv-python"
]

# You are going to use this to import - It must match the folder
[tool.hatch.build.targets.wheel]
packages = ["ai"]